Fix: selected vehicle

--- a/index.html
+++ b/index.html
@@ -98,20 +98,13 @@
         <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
     </div>
 
-    <!-- Contact Details & Email Button -->
-    <div id="contact-container">
-        <input type="text" id="customer-name" placeholder="Your Name">
-        <input type="text" id="customer-phone" placeholder="Cellphone Number">
-        <button id="send-button" onclick="sendEmail()">Send via Email</button>
-    </div>
-
     <script>
      let images = [
         { src: 'assets/1.png', name: "Foton Minibus" },
         { src: 'assets/2.png', name: "eTruckmate" },
         { src: 'assets/3.png', name: "eView Panel Van" },
         { src: 'assets/4.png', name: "Tunland G7 Single Cab" },
-        { src: 'assets/5.png', name: "Tunland G7 Double Cab" }
+        { src: 'assets/5.png', name: "tunland G& Double Cab" }
     ];
 
 
@@ -169,19 +162,6 @@
         if (event.key === "Enter") {
             sendMessage();
         }
-    function sendEmail() {
-        let name = document.getElementById("customer-name").value.trim();
-        let phone = document.getElementById("customer-phone").value.trim();
-        if (name === "" || phone === "") {
-            alert("Please enter your name and cellphone number.");
-            return;
-        }
-
-        let subject = "Customer Inquiry";
-        let body = `Hello, my name is ${name}. I am interested in ${selectedVehicle}. My contact number is ${phone}.`;
-        let mailtoLink = `mailto:sybrandswanepoel@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
-        window.location.href = mailtoLink;
-    
     }
 </script>
 
