--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <!-- Input Field -->
     <div id="input-container">
-        <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
+        <input type="text" id="user-input" placeholder="Type a message...">
     </div>
 
     <!-- Contact Details & Email Button -->
@@ -165,13 +165,12 @@
         inputField.value = "";
     }
 
-    function handleKeyPress(event) {
-    if (event.key === "Enter") {
-        event.preventDefault(); // Prevents jumping to the next input field on mobile
-        sendMessage();
-    }
-}
-
+    document.getElementById("user-input").addEventListener("keydown", function(event) {
+        if (event.key === "Enter") {
+            event.preventDefault();
+            sendMessage();
+        }
+    });
 
     function sendEmail() {
         let name = document.getElementById("customer-name").value.trim();
@@ -187,6 +186,5 @@
         window.location.href = mailtoLink;
     }
     </script>
-
 </body>
 </html>
