--- a/index.html
+++ b/index.html
@@ -79,6 +79,33 @@
             outline: none;
             font-size: 16px;
         }
+
+        /* Contact Details & Email Button */
+        #contact-container {
+            margin-top: 20px;
+        }
+
+        #customer-name, #customer-phone {
+            width: 90%;
+            max-width: 400px;
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        #send-button {
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #send-button:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
@@ -166,7 +193,7 @@
 
     function handleKeyPress(event) {
         if (event.key === "Enter") {
-            event.preventDefault();
+            event.preventDefault();  // Prevents form submission or page reload
             sendMessage();
         }
     }
