Fix: selected vehicle

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Human Motors Welkom</title>
 
     <!-- Google Analytics Tracking Code -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TRED5B5XQD"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J8MY9DEWFQ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
