--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', '10380138686');
+      gtag('config', 'G-QCYJN74VP7');
     </script>
 
     <style>
