--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     // Function to display greeting on page load
     function displayGreeting() {
         let chatbox = document.getElementById("chatbox");
-        chatbox.innerHTML += `<p><strong>Mary:</strong> Welcome to Human Motors Welkom! I'm Mary. Select a vehicle by pressing the arrow keys, and ask me anything about the vehicle. When satisfied press on the green button type in your details, and  send the email. I will let someone get in contact with you. Relax this is not a purchase agreement. You may ask questions in any language</p>`;
+        chatbox.innerHTML += `<p><strong>Mary:</strong> Welcome to Human Motors Welkom! I'm Mary. This is just a tool to give you answers on questions you may have, and is by no way an agreement to purchase. Please select a vehicle with the arrow keys and ask any questions in any language. When satisfied,press the green button type in you details and send the email. I will let someone contact you </p>`;
         chatbox.scrollTop = chatbox.scrollHeight;
     }
 
