Added missing images

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
         { src: 'assets/2.png', name: "eTruckmate" },
         { src: 'assets/3.png', name: "eView Panel Van" },
         { src: 'assets/4.png', name: "Tunland G7 Single Cab" },
-        { src: 'assets/5.png', name: "Tunland G7 Double Cab" }
+        { src: 'assets/5.png', name: "Tunland G7 Double Cab" },
+        { src: 'assets/6.png', name: "Asambe Taxi " }
+
     ];
 
     let currentIndex = 0;
