--- a/index.html
+++ b/index.html
@@ -5,142 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Motors Welkom</title>
 
-    <!-- Google Analytics Tracking Code -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCYJN74VP7"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-QCYJN74VP7');
+    </script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        emailjs.init("FBv_Eq-ltQ3fP461H");
     </script>
 
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            text-align: center; 
-            margin: 0; 
-            padding: 0; 
-            background: url("assets/ford-logo.png") no-repeat center center fixed;
-            background-size: cover;
-        }
-
-        /* Button Container */
-        #button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-
-        .arrow-button {
-            font-size: 24px;
-            background: none;
-            border: none;
-            cursor: pointer;
-            margin: 10px;
-        }
-
-        .car-button {
-            width: 180px;
-            height: 100px;
-            border: none;
-            background-size: cover;
-            background-position: center;
-            cursor: pointer;
-            border-radius: 10px;
-            transition: transform 0.2s;
-        }
-
-        .car-button:hover {
-            transform: scale(1.1);
-        }
-
-        /* Chatbox */
-        #chatbox {
-            width: 90%;
-            max-width: 400px;
-            height: 300px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 10px;
-            overflow-y: auto;
-            padding: 10px;
-            border: 1px solid #ccc;
-            text-align: left;
-        }
-
-        /* Input Field */
-        #input-container {
-            width: 90%;
-            max-width: 400px;
-            margin: 10px auto;
-            display: flex;
-            background: white;
-            border-radius: 25px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            align-items: center;
-        }
-
-        #user-input {
-            flex: 1;
-            border: none;
-            padding: 10px;
-            outline: none;
-            font-size: 16px;
-        }
-
-        /* Contact Details */
-        #contact-container input {
-            margin: 10px 0;
-            padding: 10px;
-            width: 100%;
-            border-radius: 25px;
-            border: 1px solid #ccc;
-            background-color: #f1f1f1;
-            pointer-events: none;
-            opacity: 0.5;
-        }
-
-        /* Button to activate contact details */
-        #interest-button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-        }
-
-        #interest-button:active {
-            background-color: #45a049;
-        }
+        body { font-family: Arial, sans-serif; text-align: center; background: url("assets/ford-logo.png") no-repeat center center fixed; background-size: cover; }
+        #button-container { display: flex; justify-content: center; align-items: center; padding: 20px; }
+        .arrow-button { font-size: 24px; background: none; border: none; cursor: pointer; margin: 10px; }
+        .car-button { width: 180px; height: 100px; border: none; background-size: cover; cursor: pointer; border-radius: 10px; }
+        #chatbox { width: 90%; max-width: 400px; height: 300px; margin: 0 auto; background: white; overflow-y: auto; padding: 10px; border: 1px solid #ccc; }
+        #input-container { width: 90%; max-width: 400px; margin: 10px auto; display: flex; border: 1px solid #ccc; }
+        #user-input { flex: 1; border: none; padding: 10px; outline: none; font-size: 16px; }
+        #contact-container input, #send-button { margin: 10px 0; padding: 10px; width: 100%; border-radius: 25px; border: 1px solid #ccc; }
+        #interest-button { background-color: #4CAF50; color: white; padding: 10px; border: none; border-radius: 25px; cursor: pointer; }
     </style>
 </head>
 <body>
-
-    <!-- Buttons with Arrows -->
     <div id="button-container">
         <button class="arrow-button" onclick="prevImage()">⬅️</button>
         <button id="car-button" class="car-button" style="background-image: url('assets/1.png');"></button>
         <button class="arrow-button" onclick="nextImage()">➡️</button>
     </div>
-
-    <!-- Chatbox -->
+    
     <div id="chatbox"></div>
-
-    <!-- Input Field -->
     <div id="input-container">
         <input type="text" id="user-input" placeholder="Type a message..." onkeydown="handleKeyPress(event)">
     </div>
-
-    <!-- 'I am Interested' Button -->
-    <div>
-        <button id="interest-button" onclick="activateContactFields()">I am Interested</button>
-    </div>
-
-    <!-- Contact Details & Email Button -->
+    <button id="interest-button" onclick="activateContactFields()">I am Interested</button>
     <div id="contact-container">
         <input type="text" id="customer-name" placeholder="Your Name">
         <input type="text" id="customer-phone" placeholder="Cellphone Number">
@@ -154,73 +55,21 @@
         { src: 'assets/3.png', name: "eView Panel Van" },
         { src: 'assets/4.png', name: "Tunland G7 Single Cab" },
         { src: 'assets/5.png', name: "Tunland G7 Double Cab" },
-        { src: 'assets/6.png', name: "Asambe Taxi " }
-
+        { src: 'assets/6.png', name: "Asambe Taxi" }
     ];
-
     let currentIndex = 0;
-    let carButton = document.getElementById("car-button");
-    let selectedVehicle = images[0].name; // Default to first vehicle
+    let selectedVehicle = images[0].name;
 
     function prevImage() {
         currentIndex = (currentIndex - 1 + images.length) % images.length;
-        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+        document.getElementById("car-button").style.backgroundImage = `url('${images[currentIndex].src}')`;
         selectedVehicle = images[currentIndex].name;
     }
 
     function nextImage() {
         currentIndex = (currentIndex + 1) % images.length;
-        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+        document.getElementById("car-button").style.backgroundImage = `url('${images[currentIndex].src}')`;
         selectedVehicle = images[currentIndex].name;
-    }
-
-    carButton.addEventListener("click", function() {
-        let chatbox = document.getElementById("chatbox");
-        chatbox.innerHTML += `<p><strong>Mary:</strong> You selected ${selectedVehicle}. Feel free to ask me anything about it!</p>`;
-        chatbox.scrollTop = chatbox.scrollHeight;
-    });
-
-    async function sendMessage() {
-        let inputField = document.getElementById("user-input");
-        let chatbox = document.getElementById("chatbox");
-        let userMessage = inputField.value.trim();
-        if (userMessage === "") return;
-
-        chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
-        chatbox.scrollTop = chatbox.scrollHeight;
-
-        try {
-            let response = await fetch("https://foton-server.onrender.com/message", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ 
-                    message: userMessage, 
-                    vehicle: selectedVehicle 
-                })
-            });
-            let data = await response.json();
-            chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
-            chatbox.scrollTop = chatbox.scrollHeight;
-        } catch (error) {
-            chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
-        }
-
-        inputField.value = "";
-    }
-
-    function handleKeyPress(event) {
-        if (event.key === "Enter") {
-            event.preventDefault();
-            sendMessage();
-            document.getElementById("user-input").focus();
-        }
-    }
-
-    function activateContactFields() {
-        document.getElementById("customer-name").style.pointerEvents = "auto";
-        document.getElementById("customer-phone").style.pointerEvents = "auto";
-        document.getElementById("customer-name").style.opacity = "1";
-        document.getElementById("customer-phone").style.opacity = "1";
     }
 
     function sendEmail() {
@@ -231,23 +80,23 @@
             return;
         }
 
-        let subject = "Customer Inquiry";
-        let body = `Hello, my name is ${name}. I am interested in ${selectedVehicle}. My contact number is ${phone}.`;
-        let mailtoLink = `mailto:sybrandswanepoel@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
-        window.location.href = mailtoLink;
+        let templateParams = {
+            customer_name: name,
+            customer_phone: phone,
+            vehicle_interest: selectedVehicle
+        };
+
+        emailjs.send("service_dkrqg3d", "template_h4cagb7", templateParams)
+            .then(response => alert("Email sent successfully!"))
+            .catch(error => alert("Failed to send email: " + error.text));
     }
 
-    // Function to display greeting on page load
     function displayGreeting() {
         let chatbox = document.getElementById("chatbox");
-        chatbox.innerHTML += `<p><strong>Mary:</strong> Welcome to Human Motors Welkom! I'm Mary. This is just a tool to give answers on questions you may have, and is by no way an agreement to purchase. Please select a vehicle with the arrow keys and ask any questions in any language. When satisfied,press the green button type in your details and send the email. I will let someone contact you </p>`;
-        chatbox.scrollTop = chatbox.scrollHeight;
+        chatbox.innerHTML += `<p><strong>Mary:</strong> Welcome to Human Motors Welkom! I'm Mary. Please select a vehicle and ask any questions. When satisfied, press the green button, type your details, and send an email. I'll let someone contact you.</p>`;
     }
 
-    // Run greeting function when the page loads
     window.onload = displayGreeting;
-
     </script>
-
 </body>
 </html>
