--- a/index.html
+++ b/index.html
@@ -3,307 +3,251 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <title>Human Motors Welkom</title>
+
+    <!-- Google Analytics Tracking Code -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QCYJN74VP7"></script>
     <script>
-        (function() {
-            emailjs.init("<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <script>
-        (function() {
-            emailjs.init("<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <script>
-        (function() {
-            emailjs.init("FBv_Eq-ltQ3fP461H"); // Replace with your EmailJS user ID
-        })();
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-QCYJN74VP7');
     </script>
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            margin: 0; 
+            padding: 0; 
+            background: url("assets/ford-logo.png") no-repeat center center fixed;
+            background-size: cover;
+        }
+
+        /* Button Container */
+        #button-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
+            padding: 20px;
         }
-        .chat-container {
-            width: 400px;
+
+        .arrow-button {
+            font-size: 24px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+        }
+
+        .car-button {
+            width: 180px;
+            height: 100px;
+            border: none;
+            background-size: cover;
+            background-position: center;
+            cursor: pointer;
+            border-radius: 10px;
+            transition: transform 0.2s;
+        }
+
+        .car-button:hover {
+            transform: scale(1.1);
+        }
+
+        /* Chatbox */
+        #chatbox {
+            width: 90%;
+            max-width: 400px;
+            height: 300px;
+            margin: 0 auto;
             background: white;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-        }
-        .chatbox {
-            height: 300px;
             overflow-y: auto;
             padding: 10px;
-            border-bottom: 1px solid #ccc;
+            border: 1px solid #ccc;
+            text-align: left;
         }
-        .input-container {
+
+        /* Input Field */
+        #input-container {
+            width: 90%;
+            max-width: 400px;
+            margin: 10px auto;
             display: flex;
-            padding: 10px;
-        }
-        input {
-            flex: 1;
+            background: white;
+            border-radius: 25px;
             padding: 10px;
             border: 1px solid #ccc;
-            border-radius: 5px;
-            outline: none;
+            align-items: center;
         }
-        button {
-            padding: 10px;
-            background: blue;
-            color: white;
+
+        #user-input {
+            flex: 1;
             border: none;
-            border-radius: 5px;
-            margin-left: 10px;
+            padding: 10px;
+            outline: none;
+            font-size: 16px;
+        }
+
+        /* Contact Details */
+        #contact-container input {
+            margin: 10px 0;
+            padding: 10px;
+            width: 100%;
+            border-radius: 25px;
+            border: 1px solid #ccc;
+            background-color: #f1f1f1;
+            pointer-events: none;
+            opacity: 0.5;
+        }
+
+        /* Button to activate contact details */
+        #interest-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 25px;
             cursor: pointer;
         }
-        button:hover {
-            background: darkblue;
+
+        #interest-button:active {
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
-    <div class="chat-container">
-        <div class="chatbox" id="chatbox"></div>
-        <div class="input-container">
-            <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
-            <button onclick="sendMessage()">Send</button>
-        </div>
+
+    <!-- Buttons with Arrows -->
+    <div id="button-container">
+        <button class="arrow-button" onclick="prevImage()">⬅️</button>
+        <button id="car-button" class="car-button" style="background-image: url('assets/1.png');"></button>
+        <button class="arrow-button" onclick="nextImage()">➡️</button>
+    </div>
+
+    <!-- Chatbox -->
+    <div id="chatbox"></div>
+
+    <!-- Input Field -->
+    <div id="input-container">
+        <input type="text" id="user-input" placeholder="Type a message..." onkeydown="handleKeyPress(event)">
+    </div>
+
+    <!-- 'I am Interested' Button -->
+    <div>
+        <button id="interest-button" onclick="activateContactFields()">I am Interested</button>
+    </div>
+
+    <!-- Contact Details & Email Button -->
+    <div id="contact-container">
+        <input type="text" id="customer-name" placeholder="Your Name">
+        <input type="text" id="customer-phone" placeholder="Cellphone Number">
+        <button id="send-button" onclick="sendEmail()">Send via Email</button>
     </div>
 
     <script>
-        function handleKeyPress(event) {
-            if (event.key === "Enter") {
-                sendMessage();
-            }
+    let images = [
+        { src: 'assets/1.png', name: "Foton Minibus" },
+        { src: 'assets/2.png', name: "eTruckmate" },
+        { src: 'assets/3.png', name: "eView Panel Van" },
+        { src: 'assets/4.png', name: "Tunland G7 Single Cab" },
+        { src: 'assets/5.png', name: "Tunland G7 Double Cab" },
+        { src: 'assets/6.png', name: "Asambe Taxi " }
+
+    ];
+
+    let currentIndex = 0;
+    let carButton = document.getElementById("car-button");
+    let selectedVehicle = images[0].name; // Default to first vehicle
+
+    function prevImage() {
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+        selectedVehicle = images[currentIndex].name;
+    }
+
+    function nextImage() {
+        currentIndex = (currentIndex + 1) % images.length;
+        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+        selectedVehicle = images[currentIndex].name;
+    }
+
+    carButton.addEventListener("click", function() {
+        let chatbox = document.getElementById("chatbox");
+        chatbox.innerHTML += `<p><strong>Mary:</strong> You selected ${selectedVehicle}. Feel free to ask me anything about it!</p>`;
+        chatbox.scrollTop = chatbox.scrollHeight;
+    });
+
+    async function sendMessage() {
+        let inputField = document.getElementById("user-input");
+        let chatbox = document.getElementById("chatbox");
+        let userMessage = inputField.value.trim();
+        if (userMessage === "") return;
+
+        chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+        chatbox.scrollTop = chatbox.scrollHeight;
+
+        try {
+            let response = await fetch("https://foton-server.onrender.com/message", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ 
+                    message: userMessage, 
+                    vehicle: selectedVehicle 
+                })
+            });
+            let data = await response.json();
+            chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
+            chatbox.scrollTop = chatbox.scrollHeight;
+        } catch (error) {
+            chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
         }
 
-        function sendMessage() {
-            let userInput = document.getElementById("user-input");
-            let chatbox = document.getElementById("chatbox");
+        inputField.value = "";
+    }
 
-            if (userInput.value.trim() === "") return; // Don't send empty messages
+    function handleKeyPress(event) {
+        if (event.key === "Enter") {
+            event.preventDefault();
+            sendMessage();
+            document.getElementById("user-input").focus();
+        }
+    }
 
-            chatbox.innerHTML += `<p><strong>You:</strong> ${userInput.value}</p>`;
-            sendEmail(userInput.value);
-            userInput.value = ""; // Clear input field
-            chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll to the bottom
+    function activateContactFields() {
+        document.getElementById("customer-name").style.pointerEvents = "auto";
+        document.getElementById("customer-phone").style.pointerEvents = "auto";
+        document.getElementById("customer-name").style.opacity = "1";
+        document.getElementById("customer-phone").style.opacity = "1";
+    }
+
+    function sendEmail() {
+        let name = document.getElementById("customer-name").value.trim();
+        let phone = document.getElementById("customer-phone").value.trim();
+        if (name === "" || phone === "") {
+            alert("Please enter your name and cellphone number.");
+            return;
         }
 
-        function sendEmail(message) {
-            let templateParams = {
-                message: message
-            };
-            emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", templateParams)
-                .then(function(response) {
-                    console.log("Email sent successfully", response.status, response.text);
-                }, function(error) {
-                    console.error("Failed to send email", error);
-                });
-        }
+        let subject = "Customer Inquiry";
+        let body = `Hello, my name is ${name}. I am interested in ${selectedVehicle}. My contact number is ${phone}.`;
+        let mailtoLink = `mailto:sybrandswanepoel@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+        window.location.href = mailtoLink;
+    }
+
+    // Function to display greeting on page load
+    function displayGreeting() {
+        let chatbox = document.getElementById("chatbox");
+        chatbox.innerHTML += `<p><strong>Mary:</strong> Welcome to Human Motors Welkom! I'm Mary. This is just a tool to give answers on questions you may have, and is by no way an agreement to purchase. Please select a vehicle with the arrow keys and ask any questions in any language. When satisfied,press the green button type in your details and send the email. I will let someone contact you </p>`;
+        chatbox.scrollTop = chatbox.scrollHeight;
+    }
+
+    // Run greeting function when the page loads
+    window.onload = displayGreeting;
+
     </script>
-</body>
-</html>
-"); // Replace with your EmailJS user ID
-        })();
-    </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-        }
-        .chat-container {
-            width: 400px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-        }
-        .chatbox {
-            height: 300px;
-            overflow-y: auto;
-            padding: 10px;
-            border-bottom: 1px solid #ccc;
-        }
-        .input-container {
-            display: flex;
-            padding: 10px;
-        }
-        input {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            outline: none;
-        }
-        button {
-            padding: 10px;
-            background: blue;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            margin-left: 10px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: darkblue;
-        }
-    </style>
-</head>
-<body>
-    <div class="chat-container">
-        <div class="chatbox" id="chatbox"></div>
-        <div class="input-container">
-            <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
-            <button onclick="sendMessage()">Send</button>
-        </div>
-    </div>
 
-    <script>
-        function handleKeyPress(event) {
-            if (event.key === "Enter") {
-                sendMessage();
-            }
-        }
-
-        function sendMessage() {
-            let userInput = document.getElementById("user-input");
-            let chatbox = document.getElementById("chatbox");
-
-            if (userInput.value.trim() === "") return; // Don't send empty messages
-
-            chatbox.innerHTML += `<p><strong>You:</strong> ${userInput.value}</p>`;
-            sendEmail(userInput.value);
-            userInput.value = ""; // Clear input field
-            chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll to the bottom
-        }
-
-        function sendEmail(message) {
-            let templateParams = {
-                message: message
-            };
-            emailjs.send("YOUR_SERVICE_ID", "YOUR_TEMPLATE_ID", templateParams)
-                .then(function(response) {
-                    console.log("Email sent successfully", response.status, response.text);
-                }, function(error) {
-                    console.error("Failed to send email", error);
-                });
-        }
-    </script>
-</body>
-</html>
-"); // Replace with your EmailJS user ID
-        })();
-    </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-        }
-        .chat-container {
-            width: 400px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-        }
-        .chatbox {
-            height: 300px;
-            overflow-y: auto;
-            padding: 10px;
-            border-bottom: 1px solid #ccc;
-        }
-        .input-container {
-            display: flex;
-            padding: 10px;
-        }
-        input {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            outline: none;
-        }
-        button {
-            padding: 10px;
-            background: blue;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            margin-left: 10px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: darkblue;
-        }
-    </style>
-</head>
-<body>
-    <div class="chat-container">
-        <div class="chatbox" id="chatbox"></div>
-        <div class="input-container">
-            <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
-            <button onclick="sendMessage()">Send</button>
-        </div>
-    </div>
-
-    <script>
-        function handleKeyPress(event) {
-            if (event.key === "Enter") {
-                sendMessage();
-            }
-        }
-
-        function sendMessage() {
-            let userInput = document.getElementById("user-input");
-            let chatbox = document.getElementById("chatbox");
-
-            if (userInput.value.trim() === "") return; // Don't send empty messages
-
-            chatbox.innerHTML += `<p><strong>You:</strong> ${userInput.value}</p>`;
-            sendEmail(userInput.value);
-            userInput.value = ""; // Clear input field
-            chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll to the bottom
-        }
-
-        function sendEmail(message) {
-            let templateParams = {
-                message: message
-            };
-            emailjs.send("service_dkrqg3d", "template_h4cagb7", templateParams)
-                .then(function(response) {
-                    console.log("Email sent successfully", response.status, response.text);
-                }, function(error) {
-                    console.error("Failed to send email", error);
-                });
-        }
-    </script>
 </body>
 </html>
